--- a/main.css
+++ b/main.css
@@ -52,6 +52,11 @@ code {
   padding: .7em;
 }
 
+img {
+  border: 0;
+  -ms-interpolation-mode: bicubic;
+}
+
 .pad0 {
   margin-top: 0;
   margin-bottom: 5pt;
