--- a/main.css
+++ b/main.css
@@ -15,6 +15,11 @@ div {
   margin-bottom: 5pt;
 }
 
+.footer {
+  margin-top: .5em;
+  font-size: .8em;
+}
+
 .wrapper {
   width: 960px;
   min-width: 760px;
