--- a/main.css
+++ b/main.css
@@ -291,43 +291,53 @@ table, th, td {
   list-style: none;
 }
 .blockcontent li {
+  line-height: 1.5em !important;
+}
+.blockcontent .MenuItemA {
+  text-decoration: none !important;
+}
+/*
+.blockcontent li {
   list-style: none;
   margin: 0;
   background: #eee8d5 url('./img/25.gif') repeat-x;
   border-bottom: 1px solid #839496;
   line-height: 14px !important;
 }
+*/
+/*
 .blockcontent li a {
   font: 12px/12px 'Tahoma';
-  /*
-  color: #6e6e6e;
-  */
   margin: 0;
   display: block;
   padding: 9px 0px;
 }
-.blockcontent a {
-  text-decoration: none !important;
-}
+*/
 /*
 .blockcontent li a:hover, .blockcontent .MenuItemA {
   color: #6196da;
   text-decoration: none !important;
 }
 */
-
+/*
 .blockcontent li span {
   padding: 0px 0px 2px 20px;
   margin-left: 10px;
 }
+*/
+/*
 .blockcontent a {
+  text-decoration: none !important;
   background: url('./img/26.png') 8px 9px no-repeat;
   padding: 0px 0px 2px 20px;
   margin-left: 10px;
 }
+*/
+/*
 .blockcontent .MenuItemA {
   background: url('./img/27.png') 8px 9px no-repeat;
 }
+*/
 
 /* Header
 -----------------------------------------------------------------------------*/
