--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -7,7 +7,7 @@
  <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
 
  <meta name="author" content="@ConEmuMaximus5">
- <link rel="canonical" href="{{page.canonical_url}}">
+<link rel="canonical" href="{{site.url}}{{page.url}}">
 
  <link rel="stylesheet" href="/main.css">
 
