--- a/_layouts/docs_ru.html
+++ b/_layouts/docs_ru.html
@@ -1,17 +1,18 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
- <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
- <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
 
- <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
+<meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
+<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
 
- <meta name="author" content="@ConEmuMaximus5">
+<link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
+
+<meta name="author" content="@ConEmuMaximus5">
 <link rel="canonical" href="{{site.url}}{{page.url}}">
 
- <link rel="stylesheet" href="/main.css">
+<link rel="stylesheet" href="/main.css">
 
- <title>ConEmu - эмулятор терминала Windows</title>
+<title>{{page.title}}</title>
 
 {% if site.url != 'local' %}{% include analytics.html %}{% endif %}
 
