Include canonical page url as comment

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -13,7 +13,10 @@
 <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
 
 <meta name="author" content="@ConEmuMaximus5">
-<link rel="canonical" href="{{site.url}}{{page.url}}">
+
+<!--
+This page was saved from: {{site.url}}{{page.url}}
+-->
 
 <link rel="stylesheet" href="/main.css">
 
