--- a/main.css
+++ b/main.css
@@ -25,14 +25,51 @@ div {
 }
 
 .wrapper {
-  width: 960px;
-  min-width: 760px;
   margin: 0 auto; 
   min-height: 100%;
   background-color: #fdf6e3;
   -webkit-box-shadow: 0 0 8px 3px #93a1a1;
   -moz-box-shadow: 0 0 8px 3px #93a1a1;
   box-shadow: 0 0 8px 3px #93a1a1;
+}
+
+@media (min-width: 980px) {
+  .wrapper {
+    width: 960px;
+    min-width: 760px;
+  }
+  /*
+  #media-width:after {
+    content: "wide";
+  }
+  */
+}
+
+@media (max-width: 980px) {
+  .wrapper {
+    width: 100%;
+  }
+  /*
+  #media-width:after {
+    content: "narrow";
+  }
+  */
+}
+
+@media (orientation: landscape) {
+  /*
+  #media-orient:after {
+    content: " land";
+  }
+  */
+}
+
+@media (orientation: portrait) {
+  /*
+  #media-orient:after {
+    content: " port";
+  }
+  */
 }
 
 .maincol {
