--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -18,6 +18,7 @@
 This page was saved from: {{site.url}}{{page.url}}
 -->
 
+<!--<link rel="stylesheet" href="/normalize.css">-->
 <link rel="stylesheet" href="/main.css">
 
 <title>{{page.title}}</title>
