--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -29,6 +29,7 @@ This page was saved from: {{site.url}}{{page.url}}
 {% endif %}
 
 <title>{{page.title}}</title>
+{%if page.description != '' %}<meta name="description" content="{{page.description}}">{% endif %}
 
 {% if site.url != 'local' %}{% include analytics.html %}{% endif %}
 
