Remove <h1> from logo

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -43,7 +43,7 @@ This page was saved from: {{site.url}}{{page.url}}
 	<div class="header">
 		<div id="logo-block">
 			<div>
-				<h1><a href="http://conemu.github.io">ConEmu</a></h1>
+				<div id="logo-title"><a href="http://conemu.github.io">ConEmu</a></div>
 				<div id="logo-descr">{% if site.url != 'local' %}<a href="http://conemu.github.io">Windows terminal</a>{% else %}<span id="media-width"></span><span id="media-orient"></span>{% endif %}</div>
 				<div id="social">
 					<a href="http://www.facebook.com/share.php?u=http://conemu.github.io/" rel="nofollow" target="_blank" title="FaceBook" id="soc-facebook"></a>
