--- a/main.css
+++ b/main.css
@@ -414,7 +414,7 @@ table, th, td {
   width: 270px;
   height: 90px;
 }
-#logo-block h1 {
+#logo-title {
   margin: 0px 0px 0px 55px;
   padding: 0px;
   font: 28px 'Tahoma';
