--- a/_layouts/docs_ru.html
+++ b/_layouts/docs_ru.html
@@ -30,7 +30,7 @@ This page was saved from: {{site.url}}{{page.url}}
 	<div class="header">
 		<div id="logo-block">
 			<div>
-				<h1><a href="{{ site.url }}/ru/ConEmu.html">ConEmu</a></h1>
+				<div id="logo-title"><a href="{{ site.url }}/ru/ConEmu.html">ConEmu</a></div>
 				<div id="logo-descr"><a href="{{ site.url }}/ru/ConEmu.html">эмулятор терминала</a></div>
 				<div id="social">
 					<a href="http://www.facebook.com/share.php?u=http://conemu.github.io/" rel="nofollow" target="_blank" title="FaceBook" id="soc-facebook"></a>
