Move 'copyright' to <footer>

--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -69,9 +69,7 @@ This page was saved from: {{site.url}}{{page.url}}
 </div><!-- maincol -->
 </div>
 
-<div class="footer">
-	<div id="footertext">Copyright Maximus5 © 2015</div>
-</div><!-- .footer -->
+{% include copyright.html %}
 
 </body>
 </html>
