Add 'Product' markup

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -10,6 +10,7 @@
 {% if page.url == '/index.html' %}
 <meta name='yandex-verification' content='5bb2b6c69957dc18' />
 <meta name="msvalidate.01" content="C3DA7A77EADF40C2ABF460748978E8F9" />
+{% include infomarkup.html %}
 {% endif %}
 
 <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
