--- a/_includes/menu_en.html
+++ b/_includes/menu_en.html
@@ -1,4 +1,5 @@
 			<div class="block">
+				<nav>
 				<div class="blocktitle">Site menu</div>
 				<div class="blockcontent">
 					<ul>
@@ -18,4 +19,5 @@
 					</ul>
 				</div>
 				<div class="blockbottom"></div>
+				</nav>
 			</div>
