Put 'Back to the table of contents' into <footer>

--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -54,7 +54,9 @@ This page was saved from: {{site.url}}{{page.url}}
 {{ content }}
 
 <!-- BackToContents start -->
+				<footer>
 				<div class="text stext"><a href="/en/TableOfContents.html">Back to the table of contents</a></div>
+				</footer>
 <!-- BackToContents end -->
 
 			</div><!-- .content-->
