--- a/_layouts/docs_ru.html
+++ b/_layouts/docs_ru.html
@@ -54,7 +54,9 @@ This page was saved from: {{site.url}}{{page.url}}
 {{ content }}
 
 <!-- BackToContents start -->
+				<footer>
 				<div class="text stext"><a href="/ru/TableOfContents.html">Назад к оглавлению</a></div>
+				</footer>
 <!-- BackToContents end -->
 
 			</div><!-- .content-->
