Put contents in <article>

--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -51,7 +51,11 @@ This page was saved from: {{site.url}}{{page.url}}
 		<div class="container">
 			<div class="content">
 
+<article>
+
 {{ content }}
+
+</article>
 
 <!-- BackToContents start -->
 				<footer>
