--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -64,7 +64,11 @@ This page was saved from: {{site.url}}{{page.url}}
 		<div class="container">
 			<div class="content">
 
+<article>
+
 {{ content }}
+
+</article>
 
 			</div><!-- .content-->
 		</div><!-- .container-->
