Flexible layout in progress

--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -5,6 +5,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
 <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" >
 
+<meta name="viewport" content="width=device-width, initial-scale=1">
+
 <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
 
 <meta name="author" content="@ConEmuMaximus5">
@@ -40,7 +42,7 @@ This page was saved from: {{site.url}}{{page.url}}
 					</div>
 				</div>
 			</div>
-			<div style="overflow: hidden; width:728px; height:90px; position: relative; left: 210px; top: -90px;">
+			<div id="header-google">
 {% if site.url != 'local' %}{% include googleads.html %}{% endif %}
 			</div>
 		</div>
