--- a/main.css
+++ b/main.css
@@ -6,6 +6,12 @@ max-width: 960px;
 overflow: hidden;
 }
 
+@media (max-width: 980px) {
+  .site {
+    max-width: 100%;
+  }
+}
+
 body {
   font-family: "Segoe UI", "Trebuchet MS", Verdana, Helvetica, Sans-Serif;
   background: #073642;
@@ -198,6 +204,16 @@ table, th, td {
   margin-left: -100%;
   position: relative;
 }
+
+@media (max-width: 980px) {
+  .left-sidebar {
+    display: none;
+  }
+  .content {
+    padding-left: 0;
+  }
+}
+
 
 /* Footer
 -----------------------------------------------------------------------------*/
@@ -410,6 +426,22 @@ table, th, td {
   float: left;
   margin-top: 10px;
 }
+#header-google {
+  overflow: hidden;
+  width:728px;
+  height:90px;
+  position: relative;
+  left: 210px;
+  top: -90px;
+}
+
+@media (max-width: 980px) {
+  #header-google {
+    width: 100%;
+    left: 0;
+  }
+}
+
 /* Logo
 -----------------------------------------------------------------------------*/
 #logo-block {
@@ -441,4 +473,9 @@ table, th, td {
   font: 12px 'Tahoma';
   color: #000000;
   text-shadow: 0px 1px 0px #fff;
+}
+
+article img {
+  max-width: 100%;
+  max-height: 100%;
 }
