--- a/_layouts/docs_ru.html
+++ b/_layouts/docs_ru.html
@@ -33,7 +33,7 @@ This page was saved from: {{site.url}}{{page.url}}
 		<div id="logo-block">
 			<div>
 				<div id="logo-title"><a href="{{ site.url }}/ru/ConEmu.html">ConEmu</a></div>
-				<div id="logo-descr"><a href="{{ site.url }}/ru/ConEmu.html">эмулятор терминала</a></div>
+				<div id="logo-descr"><a href="{{ site.url }}/ru/ConEmu.html">терминал Windows</a></div>
 				<div id="social">
 					<a href="http://www.facebook.com/share.php?u=http://conemu.github.io/" rel="nofollow" target="_blank" title="FaceBook" id="soc-facebook"></a>
 					<a href="http://twitter.com/share?url=http://conemu.github.io/" rel="nofollow" target="_blank" title="Twitter" id="soc-twitter"></a>
