Fix logo links for local version

--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -32,8 +32,8 @@ This page was saved from: {{site.url}}{{page.url}}
 	<div class="header">
 		<div id="logo-block">
 			<div>
-				<div id="logo-title"><a href="http://conemu.github.io">ConEmu</a></div>
-				<div id="logo-descr"><a href="http://conemu.github.io">Windows terminal</a></div>
+				<div id="logo-title"><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}">ConEmu</a></div>
+				<div id="logo-descr"><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}">Windows terminal</a></div>
 				<div id="social">
 					<a href="http://www.facebook.com/share.php?u=http://conemu.github.io/" rel="nofollow" target="_blank" title="FaceBook" id="soc-facebook"></a>
 					<a href="http://twitter.com/share?url=http://conemu.github.io/" rel="nofollow" target="_blank" title="Twitter" id="soc-twitter"></a>
