--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -77,6 +77,7 @@ This page was saved from: {{site.url}}{{page.url}}
 
 		<div class="left-sidebar">
 {% include menu_en.html %}
+{% include search.html %}
 		</div><!-- .left-sidebar -->
 
 	</div><!-- .middle-->
