--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -81,6 +81,7 @@ This page was saved from: {{site.url}}{{page.url}}
 
 		<div class="left-sidebar">
 {% include menu_en.html %}
+{% include search.html %}
 		</div><!-- .left-sidebar -->
 
 	</div><!-- .middle-->
