Search results margin

--- a/main.css
+++ b/main.css
@@ -307,6 +307,9 @@ table, th, td {
   text-decoration: none !important;
 }
 
+#search-results {
+  margin-top: 10px;
+}
 
 /* Header
 -----------------------------------------------------------------------------*/
