--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -11,6 +11,7 @@
 <meta name='yandex-verification' content='5bb2b6c69957dc18' />
 <meta name="msvalidate.01" content="C3DA7A77EADF40C2ABF460748978E8F9" />
 {% include schema_info.html %}
+{% include schema_search.html %}
 {% endif %}
 
 <link rel="icon" type="image/vnd.microsoft.icon" href="/conemu.ico">
