--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -48,8 +48,8 @@ This page was saved from: {{site.url}}{{page.url}}
 	<div class="header">
 		<div id="logo-block">
 			<div>
-				<div id="logo-title"><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/ru/ConEmu.html">ConEmu</a></div>
-				<div id="logo-descr">{% if site.url != 'local' %}<a href="http://conemu.github.io">Windows terminal</a>{% else %}<span id="media-width"></span><span id="media-orient"></span>{% endif %}</div>
+				<div id="logo-title"><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}/">ConEmu</a></div>
+				<div id="logo-descr">{% if site.url != 'local' %}<a href="http://conemu.github.io/">Windows terminal</a>{% else %}<span id="media-width"></span><span id="media-orient"></span>{% endif %}</div>
 				<div id="social">
 					<a href="http://www.facebook.com/share.php?u=http://conemu.github.io/" rel="nofollow" target="_blank" title="FaceBook" id="soc-facebook"></a>
 					<a href="http://twitter.com/share?url=http://conemu.github.io/" rel="nofollow" target="_blank" title="Twitter" id="soc-twitter"></a>
