Update schema.org for application

--- a/_includes/schema_info.html
+++ b/_includes/schema_info.html
@@ -1,16 +1,24 @@
 <script type="application/ld+json">
 {
   "@context": "http://schema.org",
-  "@type": "Product", // or "Organization" or "Person"?
+  "@type": "SoftwareApplication",
   "name": "ConEmu-Maximus5",
   "alternateName": "ConEmu",
   "description": "Local terminal for Windows",
   "url": "http://conemu.github.io",
-  "image": "http://conemu.github.io/img/ConEmu-Maximus5.png",
+  "screenshot": "http://conemu.github.io/img/ConEmu-Maximus5.png",
   "logo": "http://conemu.github.io/img/logo.png",
+  "applicationCategory": "Terminal",
+  "operatingSystem": "Windows",
+  "requirements": "Windows 2000",
   "sameAs": [ "https://twitter.com/ConEmuMaximus5",
     "https://www.facebook.com/ConEmu.Maximus5",
     "https://plus.google.com/116287257743594353797",
-    "http://conemu.tumblr.com/" ]
+    "http://conemu.tumblr.com/" ],
+  "author": {
+    "@type": "Person",
+    "name": "Maximus5",
+    "sameAs": "https://twitter.com/ConEmuMaximus5"
+  }
 }
 </script>
