Update schema.org for application

--- a/_includes/schema_info.html
+++ b/_includes/schema_info.html
@@ -10,6 +10,13 @@
   "applicationCategory": "Terminal",
   "operatingSystem": "Windows",
   "requirements": "Windows 2000",
+  "license": "http://opensource.org/licenses/BSD-3-Clause",
+  "aggregateRating": {
+    "@type": "AggregateRating",
+    "ratingValue": "5",
+    "reviewCount": "27",
+    "url": "http://www.fosshub.com/ConEmu.html"
+  },
   "sameAs": [ "https://twitter.com/ConEmuMaximus5",
     "https://www.facebook.com/ConEmu.Maximus5",
     "https://plus.google.com/116287257743594353797",
@@ -17,7 +24,7 @@
   "author": {
     "@type": "Person",
     "name": "Maximus5",
-    "logo": "http://conemu.github.io/img/logo.png",
+    "image": "http://conemu.github.io/img/logo.png",
     "sameAs": "https://twitter.com/ConEmuMaximus5"
   }
 }
