Update schema.org for application

--- a/_includes/schema_info.html
+++ b/_includes/schema_info.html
@@ -17,6 +17,10 @@
     "reviewCount": "27",
     "url": "http://www.fosshub.com/ConEmu.html"
   },
+  "offers": {
+    "@type": "Offer",
+    "price": "Free",
+  },
   "sameAs": [ "https://twitter.com/ConEmuMaximus5",
     "https://www.facebook.com/ConEmu.Maximus5",
     "https://plus.google.com/116287257743594353797",
