Update schema.org for application

--- a/_includes/schema_info.html
+++ b/_includes/schema_info.html
@@ -19,7 +19,7 @@
   },
   "offers": {
     "@type": "Offer",
-    "price": "Free",
+    "price": "Free"
   },
   "sameAs": [ "https://twitter.com/ConEmuMaximus5",
     "https://www.facebook.com/ConEmu.Maximus5",
