--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -1,5 +1,5 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="{{page.pagelang}}">
 <head>
 
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" >
