--- a/main.css
+++ b/main.css
@@ -87,6 +87,25 @@ h1, h2, h3, h4, h5, h6 {
   margin: .6em 0;
 }
 
+h1 {
+  font-size: 1.7em;
+}
+h2 {
+  font-size: 1.7em;
+}
+h3 {
+  font-size: 1.5em;
+}
+h4 {
+  font-size: 1.4em;
+}
+h5 {
+  font-size: 1.3em;
+}
+h6 {
+  font-size: 1.2em;
+}
+
 h1.intro {
   margin: 0;
 }
