<pre> margin for mobiles

--- a/main.css
+++ b/main.css
@@ -174,6 +174,12 @@ code.install {
   white-space: normal;
 }
 
+@media (max-width: 980px) {
+  pre {
+    max-width: 91%;
+  }
+}
+
 img {
   border: 0;
   -ms-interpolation-mode: bicubic;
