--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -66,6 +66,9 @@ This page was saved from: {{site.url}}{{page.url}}
 	</div><!-- .header-->
 
 	<div class="middle">
+
+{% include breadcrumbs.html %}
+
 		<div class="container">
 			<div class="content">
 
