--- a/_layouts/docs_ru.html
+++ b/_layouts/docs_ru.html
@@ -74,6 +74,8 @@ This page was saved from: {{site.url}}{{page.url}}
 
 </article>
 
+{% include read_also.html %}
+
 <!-- BackToContents start -->
 				<footer>
 				<div class="text stext"><a href="/ru/TableOfContents.html">Назад к оглавлению</a></div>
