--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -74,6 +74,8 @@ This page was saved from: {{site.url}}{{page.url}}
 
 </article>
 
+{% include read_also.html %}
+
 <!-- BackToContents start -->
 				<footer>
 				<div class="text stext"><a href="/en/TableOfContents.html">Back to the table of contents</a></div>
