--- a/main.css
+++ b/main.css
@@ -437,3 +437,16 @@ article img {
   max-width: 100%;
   max-height: 100%;
 }
+
+footer.read-also {
+  margin-top: 2.5em;
+  margin-bottom: 1em;
+}
+
+footer.read-also h2 {
+  margin: 0;
+}
+
+footer.read-also ul {
+  margin: 0.5em 0 0 0;
+}
