Fix Read-Also url-s

--- a/_includes/read_also.html
+++ b/_includes/read_also.html
@@ -1,23 +1,23 @@
 {% if page.sa1_url != nil %}<footer class="read-also">
   <h2 id="read-also">{% if page.pagelang == 'ru' %}Читайте также{% else %}Read also{% endif %}</h2>
   <ul>{% if page.sa1_url != nil %}
-    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.sa1_url }}">{{ page.sa1_title }}</a>
+    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.sa1_url }}">{{ page.sa1_title }}</a>
       </li>{% endif %}{% if page.sa2_url != nil %}
-    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.sa2_url }}">{{ page.sa2_title }}</a>
+    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.sa2_url }}">{{ page.sa2_title }}</a>
       </li>{% endif %}{% if page.sa3_url != nil %}
-    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.sa3_url }}">{{ page.sa3_title }}</a>
+    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.sa3_url }}">{{ page.sa3_title }}</a>
       </li>{% endif %}{% if page.sa4_url != nil %}
-    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.sa4_url }}">{{ page.sa4_title }}</a>
+    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.sa4_url }}">{{ page.sa4_title }}</a>
       </li>{% endif %}{% if page.sa5_url != nil %}
-    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.sa5_url }}">{{ page.sa5_title }}</a>
+    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.sa5_url }}">{{ page.sa5_title }}</a>
       </li>{% endif %}{% if page.sa6_url != nil %}
-    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.sa6_url }}">{{ page.sa6_title }}</a>
+    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.sa6_url }}">{{ page.sa6_title }}</a>
       </li>{% endif %}{% if page.sa7_url != nil %}
-    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.sa7_url }}">{{ page.sa7_title }}</a>
+    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.sa7_url }}">{{ page.sa7_title }}</a>
       </li>{% endif %}{% if page.sa8_url != nil %}
-    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.sa8_url }}">{{ page.sa8_title }}</a>
+    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.sa8_url }}">{{ page.sa8_title }}</a>
       </li>{% endif %}{% if page.sa9_url != nil %}
-    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.sa9_url }}">{{ page.sa9_title }}</a>
+    <li><a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.sa9_url }}">{{ page.sa9_title }}</a>
       </li>{% endif %}
   </ul>
 </footer>{% endif %}
