--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -10,6 +10,7 @@
 {% if page.url == '/index.html' %}
 <meta name='yandex-verification' content='5bb2b6c69957dc18' />
 <meta name="msvalidate.01" content="C3DA7A77EADF40C2ABF460748978E8F9" />
+<meta name='wmail-verification' content='ed799a87ae06320d92a0e7c9f31dec1d' />
 {% include schema_info.html %}
 {% include schema_search.html %}
 {% endif %}
