--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -8,15 +8,19 @@
     ›
   </span>{% if page.bc1_url != nil %}
   <span id="c" itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% if page.bc2_url != nil %} itemref="d" {% endif %}>
-    <a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.bc1_url }}"><span itemprop="title">{{ page.bc1_title }}</span></a>
+    <a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.bc1_url }}"><span itemprop="title">{{ page.bc1_title }}</span></a>
     ›
   </span>{% endif %}{% if page.bc2_url != nil %}
   <span id="d" itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% if page.bc3_url != nil %} itemref="e" {% endif %}>
-    <a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.bc2_url }}"><span itemprop="title">{{ page.bc2_title }}</span></a>
+    <a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.bc2_url }}"><span itemprop="title">{{ page.bc2_title }}</span></a>
     ›
   </span>{% endif %}{% if page.bc3_url != nil %}
-  <span id="e" itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child">
-    <a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}{{ page.bc3_url }}"><span itemprop="title">{{ page.bc3_title }}</span></a>
+  <span id="e" itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% if page.bc4_url != nil %} itemref="f" {% endif %}>
+    <a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.bc3_url }}"><span itemprop="title">{{ page.bc3_title }}</span></a>
+    ›
+  </span>{% endif %}{% if page.bc4_url != nil %}
+  <span id="f" itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child">
+    <a href="{% if site.url != 'local' %}{{ site.url }}{% endif %}{{ page.docfolder }}/{{ page.bc4_url }}"><span itemprop="title">{{ page.bc4_title }}</span></a>
     ›
   </span>{% endif %}
 </div>
