Simplify ReadAlso definition

--- a/_layouts/docs_en.html
+++ b/_layouts/docs_en.html
@@ -74,7 +74,7 @@ This page was saved from: {{site.url}}{{page.url}}
 
 </article>
 
-{% include read_also.html %}
+{% include readalso.html %}
 
 <!-- BackToContents start -->
 				<footer>
