--- a/_includes/breadcrumbs.html
+++ b/_includes/breadcrumbs.html
@@ -1,14 +1,14 @@
 <div>
-  <span id="a" itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemref="b">
+  <span  id="a"  itemscope itemtype="http://data-vocabulary.org/Breadcrumb"  itemref="b" >
     <a href="{{ page.docfolder }}/" itemprop="url"><span itemprop="title">{{ site.site_name }}</span></a>
     ›
   </span>
-  <span id="b" itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% if page.breadcrumbs %} itemref="c" {% endif %}>
-    <a href="{{ page.docfolder }}/TableOfContents.html"><span itemprop="title">{% if page.pagelang == 'ru' %}Содержание{% else %}Table of Contents{% endif %}</span></a>
+  <span  id="b"  itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% if page.breadcrumbs %} itemref="c" {% endif %}>
+    <a href="{{ page.docfolder }}/TableOfContents.html" itemprop="url"><span itemprop="title">{% if page.pagelang == 'ru' %}Содержание{% else %}Table of Contents{% endif %}</span></a>
     ›
   </span>{% for bc in page.breadcrumbs %}
   <span id="{{ bc.id }}" itemscope itemtype="http://data-vocabulary.org/Breadcrumb" itemprop="child" {% if bc.next %} itemref="{{ bc.next }}" {% endif %}>
-    <a href="{{ page.docfolder }}/{{ bc.url }}"><span itemprop="title">{{ bc.title }}</span></a>
+    <a href="{{ page.docfolder }}/{{ bc.url }}" itemprop="url"><span itemprop="title">{{ bc.title }}</span></a>
     ›
   </span>{% endfor %}
 </div>
