Optional 'canonical' for some pages

--- a/_layouts/root.html
+++ b/_layouts/root.html
@@ -19,6 +19,8 @@
 
 <meta name="author" content="@ConEmuMaximus5">
 
+{% if page.canonical and page.canonical != '' %}
+<link rel="canonical" href="{{page.canonical}}">{% endif %}
 <!--
 This page was saved from: {{site.url}}{{page.url}}
 -->
