--- a/_layouts/docs_ru.html
+++ b/_layouts/docs_ru.html
@@ -11,6 +11,8 @@
 
 <meta name="author" content="@ConEmuMaximus5">
 
+{% if page.canonical and page.canonical != '' %}
+<link rel="canonical" href="{{page.canonical}}">{% endif %}
 <!--
 This page was saved from: {{site.url}}{{page.url}}
 -->
